[package]
name = "akiv"
version = "0.1.0"
authors = ["sergio garcia <sergio.garcia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
chrono = "0.4"
parse_duration = "2.1.1"
rusqlite = "0.25.1"
directories = "3.0.2"
anyhow = "1.0.40"