[package]
name = "akiv"
version = "0.1.1"
authors = ["sergio garcia <sergio.garcia@gmail.com>"]
edition = "2018"
description = "The hyper minimalistic daily planner."
license = "GPL-3.0"
readme = "README.md"


[dependencies]
structopt = "0.3"
chrono = "0.4"
humantime = "2.1.0"
rusqlite = {version = "0.25.1", features=["chrono"]}
directories = "3.0.2"
anyhow = "1.0.40"
prettytable-rs = "0.10.0"
textwrap = "0.13.4"